@@ -128,7 +128,8 @@ CREATE TABLE cache_hash (
   data mediumtext,
   tags mediumtext,
   lifetime int(11) unsigned DEFAULT '0' NOT NULL,
-  PRIMARY KEY (id)
+  PRIMARY KEY (id),
+  KEY cache_id (identifier)
 ) ENGINE=InnoDB;
 
 #
