@@ -34,6 +34,7 @@
 	* Added class t3lib_cache to easily initialize the various caches in TYPO3 (cache_pages only for now)
 	* Changed table cache_pagesection to use t3lib_cache
 	* Changed table cache_hash to use t3lib_cache
+	* Added indexes for the cache tables (cache_hash, cache_pages, cache_pagesection)
 
 2008-09-23  Martin Kutschker  <masi@typo3.org>
 
